--- a/DotnetCalAPI/appsettings.json
+++ b/DotnetCalAPI/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "jwtTokenConfig": {
+    "secret": "123456789qwertyuiopasdfghjklzxcvbnm",
+    "issuer": "https://dotnetcal.com",
+    "audience": "https://dotnetcal.com",
+    "accessTokenExpiration": 20,
+    "refreshTokenExpiration": 60
+  }
 }
