--- a/dotnet-cal-client/package.json
+++ b/dotnet-cal-client/package.json
@@ -13,7 +13,7 @@
     "element-ui": "^2.15.0",
     "vue": "^2.6.11",
     "vuex": "^3.6.2",
-    "vuex-persistedstate": "^4.0.0-beta.3"
+    "vuex-persistedstate": "^3.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
