--- a/DotnetCalAPI/DotnetCal.csproj
+++ b/DotnetCalAPI/DotnetCal.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>    
+    <PackageReference Include="BouncyCastle" Version="1.8.9" />    
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.10" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
